# OmniService.ai

./: .gitignore  README.md  api.py  docker-compose-graph.yaml  docker-compose-weaviate.yml  pyproject.toml
modules/: agent.py  extract.py  graph_store.py  ingest.py  llm_parser.py  persistence.py  scheme.py  search.py  template.py  vector_ingest.py
